--- a/assets/template_styles.css
+++ b/assets/template_styles.css
@@ -33,7 +33,7 @@ p, li{
 }
 
 .nav-link{
-    font-size: 1.5em;
+    font-size: 1em;
     color:var(--base-back);
 }
 .nav-link:hover{
@@ -54,6 +54,10 @@ footer{
 
 .row{
     background-color: var(--base-back);
+}
+
+ol li div{
+    color: blueviolet;
 }
 
 
