--- a/assets/template_styles.css
+++ b/assets/template_styles.css
@@ -17,8 +17,15 @@ h1{
     color:white;
     text-align: left;
 }
+h3{
+    background-color: rgba(100,100,100, 0.2);
+}
 p, li{
     font-size: 1.2em;
+}
+
+hr{
+    margin-bottom: 2em;
 }
 
 /* -- navigation --- */
