--- a/assets/template_styles.css
+++ b/assets/template_styles.css
@@ -17,6 +17,9 @@ h1{
     color:white;
     text-align: left;
 }
+h2{
+    margin: 2em 0 1em 0;
+}
 h3{
     background-color: rgba(100,100,100, 0.2);
 }
