--- a/assets/template_styles.css
+++ b/assets/template_styles.css
@@ -26,6 +26,9 @@ h3{
     margin: 1em 0em;
     background-color: rgba(100,100,100, 0.2);
 }
+h4{
+    margin: 0.5rem 0;
+}
 p, li{
     font-size: 1.2em;
 }
